; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_stream.c_vlclua_directory_stream_new.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_stream.c_vlclua_directory_stream_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_directory_stream_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_directory_stream_new(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32* @vlclua_get_this(i32* %7)
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i8* @luaL_checkstring(i32* %9, i32 1)
  store i8* %10, i8** %5, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32* @vlc_stream_NewURL(i32* %11, i8* %12)
  store i32* %13, i32** %6, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %1
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @vlclua_error(i32* %17)
  store i32 %18, i32* %2, align 4
  br label %32

19:                                               ; preds = %1
  %20 = call i64 @vlc_stream_directory_Attach(i32** %6, i32* null)
  %21 = load i64, i64* @VLC_SUCCESS, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %28

23:                                               ; preds = %19
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @vlc_stream_Delete(i32* %24)
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @vlclua_error(i32* %26)
  store i32 %27, i32* %2, align 4
  br label %32

28:                                               ; preds = %19
  %29 = load i32*, i32** %3, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @vlclua_stream_new_inner(i32* %29, i32* %30)
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %28, %23, %16
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32* @vlclua_get_this(i32*) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i32* @vlc_stream_NewURL(i32*, i8*) #1

declare dso_local i32 @vlclua_error(i32*) #1

declare dso_local i64 @vlc_stream_directory_Attach(i32**, i32*) #1

declare dso_local i32 @vlc_stream_Delete(i32*) #1

declare dso_local i32 @vlclua_stream_new_inner(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
